--- a/plugin.xml
+++ b/plugin.xml
@@ -113,6 +113,26 @@
          <framework src="CoreGraphics.framework" />
          <framework src="AVFoundation.framework" />
 
+         <preference name="CAMERA_USAGE_DESCRIPTION" default=" " />
+         <config-file target="*-Info.plist" parent="NSCameraUsageDescription">
+             <string>$CAMERA_USAGE_DESCRIPTION</string>
+         </config-file>
+
+         <preference name="PHOTOLIBRARY_USAGE_DESCRIPTION" default=" " />
+         <config-file target="*-Info.plist" parent="NSPhotoLibraryUsageDescription">
+             <string>$PHOTOLIBRARY_USAGE_DESCRIPTION</string>
+         </config-file>
+         
+         <preference name="LOCATION_WHENINUSE_USAGE_DESCRIPTION" default=" " />
+         <config-file target="NSLocationWhenInUseUsageDescription" file="*-Info.plist">
+             <string>$LOCATION_WHENINUSE_USAGE_DESCRIPTION</string>
+         </config-file>
+
+         <preference name="PHOTOLIBRARY_ADD_USAGE_DESCRIPTION" default=" " />
+         <config-file target="NSPhotoLibraryAddUsageDescription" file="*-Info.plist">
+             <string>$PHOTOLIBRARY_ADD_USAGE_DESCRIPTION</string>
+         </config-file>         
+
      </platform>
 
     <!-- browser -->
