--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-camera",
-  "version": "4.0.3",
+  "version": "4.0.3-OS",
   "description": "Cordova Camera Plugin",
   "types": "./types/index.d.ts",
   "cordova": {
