feat: update supported plugins to use support library 28
Since we are going to raise the Android target SDK to 28
we also raised the used support library versions to 28.

BREAKING CHANGE: potential dependency version conflicts
BREAKING CHANGE: only compatible with projects that target SDK >= 28
References https://outsystemsrd.atlassian.net/browse/RNMT-2726

--- a/plugin.xml
+++ b/plugin.xml
@@ -81,7 +81,7 @@
             <clobbers target="CameraPopoverHandle" />
           </js-module>
 
-        <framework src="com.android.support:support-v4:24.1.1+" />
+        <framework src="com.android.support:support-v4:28.0.0" />
 
       </platform>
 
