--- a/plugin.xml
+++ b/plugin.xml
@@ -81,7 +81,7 @@
             <clobbers target="CameraPopoverHandle" />
           </js-module>
 
-        <framework src="com.android.support:support-v4:28.0.0" />
+        <framework src="libs/android/build.gradle" custom="true" type="gradleReference" />
 
       </platform>
 
