--- a/plugin.xml
+++ b/plugin.xml
@@ -48,6 +48,7 @@
 
     <!-- android -->
     <platform name="android">
+        <hook type="before_plugin_install" src="hooks/Android/MABSVersionChecker.js" />
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="Camera">
                 <param name="android-package" value="org.apache.cordova.camera.CameraLauncher"/>
